# 42

./: .gitignore  README.md
42cursus/: .gitignore  README.md
42cursus/Circle 0/: README.md
42cursus/Circle 1/: README.md
42cursus/Circle 2/: README.md
42cursus/Circle 3/Call_Me_Maybe/: .gitignore  Makefile  README.md  pyproject.toml
42cursus/Circle 3/Call_Me_Maybe/data/input/: test_function_calling_tests.json  test_functions_definition.json
42cursus/Circle 3/Call_Me_Maybe/llm_sdk/llm_sdk/: __init__.py
42cursus/Circle 3/Call_Me_Maybe/src/: __init__.py  __main__.py  generate.py
42cursus/Circle 3/Call_Me_Maybe/src/debug/: __init__.py  print_debug.py
42cursus/Circle 3/Call_Me_Maybe/src/engine/: CallMeMaybe.py  Output.py  Vocabulary.py  __init__.py  llm_instructions_model.py  prompt.py
42cursus/Circle 3/Call_Me_Maybe/src/models/: __init__.py  schemas.py
42cursus/Circle 3/Call_Me_Maybe/src/parser/: __init__.py  arguments_checker.py  llm_path_checker.py  parse_json_file.py  parser.py  path_checker.py
42cursus/Circle 3/Call_Me_Maybe/src/utils/: __init__.py  display.py  files.py  func_timer.py  logo.py
42cursus/Circle 3/Call_Me_Maybe/tests/: __init__.py  test_path_checker.py
42cursus/Libft/: Makefile  ft_lstdelone_bonus.c  ft_lstmap_bonus.c  ft_lstnew.c  ft_lstnew_bonus.c  ft_memmove.c  ft_putnbr_fd.c  ft_strmapi.c  ft_strtrim.c  ft_substr.c  libft.h  main.c  test.c
42cursus/born2beroot/: commands_helper.md  monitoring.sh
42cursus/ft_printf/: Makefile  ft_print_hexa_lower.c  main.c  (+7 more)
Libft/: Makefile
Piscine/: README  README.md
assets/: README.md
(+256 files in other folders)
